--- a/pattern-help.html
+++ b/pattern-help.html
@@ -26,7 +26,7 @@
 						<p>The order of white patterns and black patterns within a proxy do not matter.</p>
 						<h3>Wildcards</h3>
 						<div class="callout alert">
-							<div class="callout-tiny warning" style="max-width: 25rem">Warning: This behavior is different than older versions of FoxyProxy</div>Because of <a target="_blank" href="https://bugzilla.mozilla.org/show_bug.cgi?id=1337001">Firefox limitations</a>, only URL domains, subdomains, and ports are recognized in patterns. Do not use paths or query parameters in patterns. Example: <strong>*.foxyproxy.com:30053</strong> is OK but not <strong>*.foxyproxy.com:30053/help/*</strong><div class="callout-tiny warning" style="max-width: 25rem">Warning: This behavior is different than older versions of FoxyProxy.</div>
+							Because of <a target="_blank" href="https://bugzilla.mozilla.org/show_bug.cgi?id=1337001">Firefox limitations</a>, only URL domains, subdomains, and ports are recognized in patterns. Do not use paths or query parameters in patterns. Example: <strong>*.foxyproxy.com:30053</strong> is OK but not <strong>*.foxyproxy.com:30053/help/*</strong>
 						</div>
 						<h4 id="examples">Examples</h4>
 						<table>
@@ -39,7 +39,7 @@
 								</tr>
 								<tr>
 									<td><strong>.foxyproxy.com</strong><br>Match URLs at foxyproxy.com and all subdomains<br>(same as pattern above)</td>
-									<td>foxyproxy.com/order.html<br>help.foxyproxy.com/index.html<br>foo.bar.foxyproxy.com<br>twostep.foxyproxy.com</td>									
+									<td>foxyproxy.com/order.html<br>help.foxyproxy.com/index.html<br>foo.bar.foxyproxy.com<br>twostep.foxyproxy.com</td>
 									<td>mozilla.com</td>
 								</tr>
 								<tr>
