--- a/patterns.html
+++ b/patterns.html
@@ -39,14 +39,14 @@
 				<a href="/pattern-help.html" target="_blank">Pattern Help</a> |
 				<a href="/pattern-tester.html" target="_blank">Pattern Tester</a>
 				<div class="small-12 columns callout alert" style="margin-top: 1rem">
-					<div class="callout-tiny warning" style="max-width: 25rem">Warning: This behavior is different than older versions of FoxyProxy</div>Because of <a target="_blank" href="https://bugzilla.mozilla.org/show_bug.cgi?id=1337001">Firefox limitations</a>, only URL domains, subdomains, and ports are recognized in patterns. Do not use paths or query parameters in patterns. Example: <strong>*.foxyproxy.com:30053</strong> is OK but not <strong>*.foxyproxy.com:30053/help/*</strong><div class="callout-tiny warning" style="max-width: 25rem">Warning: This behavior is different than older versions of FoxyProxy.</div>
+					Because of <a target="_blank" href="https://bugzilla.mozilla.org/show_bug.cgi?id=1337001">Firefox limitations</a>, only URL domains, subdomains, and ports are recognized in patterns. Do not use paths or query parameters in patterns. Example: <strong>*.foxyproxy.com:30053</strong> is OK but not <strong>*.foxyproxy.com:30053/help/*</strong>
 				</div>
 				<div class="row">
 					<div class="small-9 columns">
 						Add patterns to prevent this proxy being used for localhost and intranet/private IP addresses <span data-tooltip aria-haspopup="true" class="has-tip" data-disable-hover="false" title="Adds blacklist patterns for localhost, 127.0.0.1, 192.168.*.*, 172.16.*.*, and 10.*.*.*">Help</span>
 					</div>
 					<div class="small-3 columns">
-						<input id="addLocal" type="button" class="button small" value="Add"> 
+						<input id="addLocal" type="button" class="button small" value="Add">
 					</div>
 				</div>
 
