Removed several jQuery plugins towards the day when jQuery will be completely removed. Upgraded jQuery from 2.2.4 to 3.4.1 per Mozilla regulations. Replaced the inline editing bad UI on the patterns page with a modal dialog (vex library). Removed cruft.

--- a/patterns.html
+++ b/patterns.html
@@ -5,10 +5,9 @@
 		<link rel="stylesheet" href="styles/fontawesome-4.6.3.css">
     <link rel="stylesheet" href="styles/foundation-6.4.2/foundation.css">
 		<link rel="stylesheet" href="styles/foundation-6.4.2/motion-ui.css">
-		<link rel="stylesheet" href="styles/flagicon-2.4.0.css">
-		<link rel="stylesheet" href="styles/jquery-ui.css">
-		<link rel="stylesheet" href="styles/jqueryui-editable.css">
     <link rel="stylesheet" href="styles/app.css">
+    <link rel="stylesheet" href="styles/vex.css"/>
+    <link rel="stylesheet" href="styles/vex-theme-default.css"/>    
   </head>
   <body style="margin: 1rem">
 
@@ -95,13 +94,11 @@
 
   </body>
 	<script src="scripts/const.js"></script>
-	<script src="scripts/jquery-2.2.4.js"></script>
+  <script src="scripts/jquery-3.4.1.js"></script>
   <script src="scripts/foundation-6.4.2/foundation.js"></script>
 	<script src="scripts/foundation-6.4.2/motion-ui.js"></script>
-	<!--<script src="scripts/jquery.poshytip.js"></script> -->
-	<script src="scripts/jquery-ui.js"></script>
-  <script src="scripts/jqueryui-editable.js"></script>
 	<script src="scripts/jquery.bootpag.js"></script>
+  <script src="scripts/vex.combined.js"></script>
 	<script src="scripts/patterns.js"></script>
 	<script src="scripts/storage.js"></script>
 	<script src="scripts/utils.js"></script>
