--- a/about.html
+++ b/about.html
@@ -34,11 +34,12 @@
 
           <h6>Version 6.5</h6>
 
-          <ul>
-              <li>Replaced the inline editing bad UI on the patterns page with a modal dialog (<a href="https://github.hubspot.com/vex/docs/welcome/">vex</a> library from HubSpot)</li>
-              <li>Removed several jQuery plugins towards the day when jQuery will be completely removed. Upgraded jQuery from 2.2.4 to 3.4.1 per Mozilla regulations.</li>
-              <li>Removed cruft</li>
-          </ul>
+					<ul>
+							<li>Replaced the inline editing bad UI on the patterns page with a modal dialog (<a href="https://github.hubspot.com/vex/docs/welcome/">vex</a> library from HubSpot)</li>
+							<li>Initial i18n support with 1 page localized.</li>
+							<li>Removed several jQuery plugins towards the day when jQuery will be completely removed. Upgraded jQuery from 2.2.4 to 3.4.1 per Mozilla regulations.</li>
+							<li>Removed cruft</li>
+					</ul>
 
           <h6>Version 6.4</h6>
 
