--- a/first-install.html
+++ b/first-install.html
@@ -25,6 +25,7 @@
 
             <ul>
                 <li>Replaced the inline editing bad UI on the patterns page with a modal dialog (<a href="https://github.hubspot.com/vex/docs/welcome/">vex</a> library from HubSpot)</li>
+								<li>Initial i18n support with 1 page localized.</li>
                 <li>Removed several jQuery plugins towards the day when jQuery will be completely removed. Upgraded jQuery from 2.2.4 to 3.4.1 per Mozilla regulations.</li>
                 <li>Removed cruft</li>
             </ul>
