remove pic from first install but keep in about page

--- a/src/first-install.html
+++ b/src/first-install.html
@@ -40,7 +40,7 @@
             <h4>Support Me</h4>
             <p>Support me by <a target="_blank" href="https://www.paypal.me/ericjung2/9.99">donating</a> or <a target="_blank" href="https://getfoxyproxy.org/order/">buying VPN/proxy service.</a></p>
 
-            <strong>Thank you for using FoxyProxy!</strong></p><img src="/images/ericjung.png"><p>-- <a href="mailto:eric.jung@getfoxyproxy.org">Eric H. Jung</a></p>
+            <strong>Thank you for using FoxyProxy!</strong></p><p>-- <a href="mailto:eric.jung@getfoxyproxy.org">Eric H. Jung</a></p>
 
           </div>
           <span style="float: right">
