upgrade jscolor from 2.0.4 to 2.0.5

--- a/src/add-edit-proxy.html
+++ b/src/add-edit-proxy.html
@@ -113,6 +113,6 @@
   <script src="scripts/foundation-6.4.2/foundation.js"></script>
   <script src="scripts/storage.js"></script>
   <script src="scripts/utils.js"></script>
-  <script src="scripts/jscolor.js"></script>
+  <script src="scripts/jscolor-2.0.5.js"></script>
   <script src="scripts/add-edit-proxy.js"></script>
 </html>
