removed Zurb Foundation. removed cruft

--- a/src/about.html
+++ b/src/about.html
@@ -39,7 +39,7 @@
 					<ul>
 							<li>Import/Export patterns to and from files.</li>
 							<li>Replaced paging on the patterns page with infinite scroll.</li>
-							<li>Replaced the inline editing on the patterns page with a modal dialog (<a href="https://github.hubspot.com/vex/docs/welcome/">vex</a> library from HubSpot).</li>
+							<li>Replaced the inline editing on the patterns page with a modal dialog.</li>
 							<li>Initial i18n support with 1 page localized.</li>
 							<li>Removed several jQuery plugins towards the day when jQuery will be completely removed. Upgraded jQuery from 2.2.4 to 3.4.1 per Mozilla regulations.</li>
 							<li>Several UI improvements; for example, rounded containers are now less round, message after successful export, etc.</li>
