--- a/src/first-install.html
+++ b/src/first-install.html
@@ -2,8 +2,6 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles/fontawesome-4.6.3.css">
-    <link rel="stylesheet" href="styles/foundation-6.4.2/foundation.css">
     <link rel="stylesheet" href="styles/app.css">
   </head>
   <body style="margin: 1rem">
@@ -27,7 +25,7 @@
 						<ul>
 								<li>Import/Export patterns to and from files.</li>
 								<li>Replaced paging on the patterns page with infinite scroll.</li>
-								<li>Replaced the inline editing on the patterns page with a modal dialog (<a href="https://github.hubspot.com/vex/docs/welcome/">vex</a> library from HubSpot).</li>
+								<li>Replaced the inline editing on the patterns page with a modal dialog</li>
 								<li>Initial i18n support with 1 page localized.</li>
 								<li>Removed several jQuery plugins towards the day when jQuery will be completely removed. Upgraded jQuery from 2.2.4 to 3.4.1 per Mozilla regulations.</li>
 								<li>Several UI improvements; for example, rounded containers are now less round, message after successful export, etc.</li>
@@ -56,10 +54,7 @@
     </div>
 
     <script src="scripts/jquery-3.4.1.js"></script>
-    <script src="scripts/foundation-6.4.2/foundation.js"></script>
-    <script src="scripts/storage.js"></script>
     <script src="scripts/utils.js"></script>
     <script src="scripts/import.js"></script>
-    <script src="scripts/const.js"></script>
   </body>
 </html>
