switch to use minimized version of jQuery

--- a/src/about.html
+++ b/src/about.html
@@ -72,7 +72,7 @@
       </div>
     </div>
 
-    <script src="scripts/jquery-3.4.1.js"></script>
+    <script src="scripts/jquery-3.4.1.min.js"></script>
     <script src="scripts/foundation-6.4.2/foundation.js"></script>
     <script src="scripts/const.js"></script>
     <script src="scripts/about.js"></script>
