--- a/src/first-install.html
+++ b/src/first-install.html
@@ -53,7 +53,7 @@
       </div>
     </div>
 
-    <script src="scripts/jquery-3.4.1.js"></script>
+    <script src="scripts/jquery-3.4.1.min.js"></script>
     <script src="scripts/utils.js"></script>
     <script src="scripts/import.js"></script>
   </body>
