--- a/src/pattern-tester.html
+++ b/src/pattern-tester.html
@@ -48,7 +48,7 @@
       </div>
     </div>
 
-    <script src="scripts/jquery-3.4.1.js"></script>
+    <script src="scripts/jquery-3.4.1.min.js"></script>
     <script src="scripts/const.js"></script>
     <script src="scripts/pattern-tester.js"></script>
     <script src="scripts/utils.js"></script>
