--- a/src/patterns.html
+++ b/src/patterns.html
@@ -93,7 +93,7 @@
 
   </body>
   <script src="scripts/const.js"></script>
-  <script src="scripts/jquery-3.4.1.js"></script>
+  <script src="scripts/jquery-3.4.1.min.js"></script>
   <script src="scripts/vex.combined.js"></script>
   <script src="scripts/patterns.js"></script>
   <script src="scripts/storage.js"></script>
