--- a/src/background.html
+++ b/src/background.html
@@ -207,7 +207,7 @@
                style="fill:#5c5d5d;fill-opacity:1;fill-rule:nonzero;stroke:none"
                d="M 0,0 C 0.858,0.275 1.874,0.881 2.632,1.389 3.313,1.846 4.006,2.344 4.25,3.106 3.887,1.972 2.931,0.588 1.994,-0.055 1.517,-0.382 1.029,-0.701 0.617,-1.111 0.216,-1.509 -0.117,-1.482 -0.718,-1.59 -0.766,-1.337 -0.75,-1.075 -0.75,-0.813" /></g></g></g></g></g></svg>
 
-  <script src="scripts/jquery-3.4.1.js"></script>
+  <script src="scripts/jquery-3.4.1.min.js"></script>
   <script src="scripts/utils.js"></script>
   <script src="scripts/const.js"></script>
   <script src="scripts/storage.js"></script>
