--- a/src/import.html
+++ b/src/import.html
@@ -37,7 +37,7 @@
       </div>
     </div>
 
-    <script src="scripts/jquery-3.4.1.js"></script>
+    <script src="scripts/jquery-3.4.1.min.js"></script>
     <script src="scripts/storage.js"></script>
     <script src="scripts/utils.js"></script>
     <script src="scripts/import.js"></script>
