--- a/src/log.html
+++ b/src/log.html
@@ -53,7 +53,7 @@
       </div>
     </div>
   </body>
-  <script src="scripts/jquery-3.4.1.js"></script>
+  <script src="scripts/jquery-3.4.1.min.js"></script>
   <script src="scripts/const.js"></script>
   <script src="scripts/utils.js"></script>
   <script src="scripts/storage.js"></script>
