--- a/src/proxies.html
+++ b/src/proxies.html
@@ -141,7 +141,7 @@
     </span>
 
   <script src="scripts/const.js"></script>
-  <script src="scripts/jquery-3.4.1.js"></script>
+  <script src="scripts/jquery-3.4.1.min.js"></script>
   <script src="scripts/jquery-swapsies.js"></script>
   <script src="scripts/storage.js"></script>
   <script src="scripts/utils.js"></script>
