--- a/src/about.html
+++ b/src/about.html
@@ -34,7 +34,14 @@
 
           <h4>Release Notes for Recent Releases</h4>
 
-          <h6>Version 6.5</h6>
+					<h6>Version 6.6</h6>
+
+					<ul>
+							<li>Security fixes with jQuery.</li>
+							<li>Minor UI fixes to the toolbar popup window</li>
+					</ul>
+
+          <h6>Version 6.5 (unreleased)</h6>
 
 					<ul>
 							<li>Import/Export patterns to and from files.</li>
@@ -46,7 +53,7 @@
 							<li>Removed cruft</li>
 					</ul>
 
-          <h6>Version 6.4</h6>
+          <h6>Version 6.4 (unreleased)</h6>
 
           <ul>
             <li><strong>Fixed pattern matching bug</strong> whereby patterns with leading .* or . did not always accurately match subdomains.</li>
