--- a/src/first-install.html
+++ b/src/first-install.html
@@ -20,7 +20,14 @@
 						<p>FoxyProxy has been the around for almost 15 years. So if you're upgrading from a legacy version, and your proxy settings are missing, please <a href="/import.html">import</a> them.</p>
             <h4>What's New</h4>
 
-            <h6>Version 6.5</h6>
+						<h6>Version 6.6</h6>
+
+						<ul>
+								<li>Security fixes with jQuery.</li>
+								<li>Minor UI fixes to the toolbar popup window</li>
+						</ul>
+
+            <h6>Version 6.5 (unreleased)</h6>
 
 						<ul>
 								<li>Import/Export patterns to and from files.</li>
@@ -32,7 +39,7 @@
 								<li>Removed cruft</li>
 						</ul>
 
-	          <h6>Version 6.4</h6>
+	          <h6>Version 6.4 (unreleased)</h6>
 
 	          <ul>
 	            <li><strong>Fixed pattern matching bug</strong> whereby patterns with leading .* or . did not always accurately match subdomains.</li>
