remove all minified code, use version numbers in 3rd party library filenames

--- a/src/about.html
+++ b/src/about.html
@@ -34,7 +34,13 @@
 
           <h4>Release Notes for Recent Releases</h4>
 
-					<h6>Version 6.6</h6>
+					<h6>Version 6.6.1</h6>
+
+					<ul>
+						<li>Removed all minified code for Mozilla; change filenames of 3rd-party libs to include version number.</li>
+					</ul>
+
+					<h6>Version 6.6 (unreleased)</h6>
 
 					<ul>
 							<li>Security fixes with jQuery.</li>
@@ -79,7 +85,7 @@
       </div>
     </div>
 
-    <script src="scripts/jquery-3.4.1.min.js"></script>
+    <script src="scripts/jquery-3.4.1.js"></script>
     <script src="scripts/foundation-6.4.2/foundation.js"></script>
     <script src="scripts/const.js"></script>
     <script src="scripts/about.js"></script>
