--- a/src/add-edit-proxy.html
+++ b/src/add-edit-proxy.html
@@ -108,7 +108,7 @@
     </div>
   </body>
   <script src="scripts/const.js"></script>
-  <script src="scripts/jquery-3.4.1.min.js"></script>
+  <script src="scripts/jquery-3.4.1.js"></script>
   <script src="scripts/storage.js"></script>
   <script src="scripts/utils.js"></script>
   <script src="scripts/jscolor-2.0.5.js"></script>
