--- a/src/patterns.html
+++ b/src/patterns.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/fontawesome-4.6.3.css">
     <link rel="stylesheet" href="styles/app.css">
-    <link rel="stylesheet" href="styles/vex.css"/>
-    <link rel="stylesheet" href="styles/vex-theme-default.css"/>
-		<link rel="stylesheet" href="styles/clusterize.css"/>
+    <link rel="stylesheet" href="styles/vex-4.1.0.css"/>
+    <link rel="stylesheet" href="styles/vex-theme-default-4.1.0.css"/>
+		<link rel="stylesheet" href="styles/clusterize-0.18.0.css"/>
   </head>
   <body style="margin: 1rem">
 
@@ -93,10 +93,10 @@
 
   </body>
   <script src="scripts/const.js"></script>
-  <script src="scripts/jquery-3.4.1.min.js"></script>
-  <script src="scripts/vex.combined.js"></script>
+  <script src="scripts/jquery-3.4.1.js"></script>
+  <script src="scripts/vex.combined-4.1.0.js"></script>
   <script src="scripts/patterns.js"></script>
   <script src="scripts/storage.js"></script>
   <script src="scripts/utils.js"></script>
-	<script src="scripts/clusterize.min.js"></script>
+	<script src="scripts/clusterize-0.18.0.js"></script>
 </html>
