--- a/src/popup.html
+++ b/src/popup.html
@@ -40,11 +40,11 @@
 
   <span class="hide-unimportant" id="modeOptionTemplate"><li class="fp-browserActionPopup"><a id="%idx" style="color: %color"><span id="%idxSelected"></span>Use proxy %title for all URLs (ignore patterns)</a></li></span>
 
-  <script src="scripts/jquery-3.4.1.min.js"></script>
+  <script src="scripts/jquery-3.4.1.js"></script>
   <script src="scripts/const.js"></script>
   <script src="scripts/storage.js"></script>
   <script src="scripts/utils.js"></script>
   <script src="scripts/popup.js"></script>
-	<script src="scripts/purify.min.js"></script>
+	<script src="scripts/dompurify-1.0.11.js"></script>
   </body>
 </html>
