--- a/src/proxies.html
+++ b/src/proxies.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/fontawesome-4.6.3.css">
     <link rel="stylesheet" href="styles/app.css">
-    <link rel="stylesheet" href="styles/vex.css"/>
-    <link rel="stylesheet" href="styles/vex-theme-default.css"/>
+    <link rel="stylesheet" href="styles/vex-4.1.0.css"/>
+    <link rel="stylesheet" href="styles/vex-theme-default-4.1.0.css"/>
   </head>
   <body>
     <div class="row"><p><!-- spacer --></p></div>
@@ -141,13 +141,13 @@
     </span>
 
   <script src="scripts/const.js"></script>
-  <script src="scripts/jquery-3.4.1.min.js"></script>
+  <script src="scripts/jquery-3.4.1.js"></script>
   <script src="scripts/jquery-swapsies.js"></script>
   <script src="scripts/storage.js"></script>
   <script src="scripts/utils.js"></script>
-  <script src="scripts/vex.combined.js"></script>
+  <script src="scripts/vex.combined-4.1.0.js"></script>
   <script src="scripts/proxies.js"></script>
-	<script src="scripts/purify.min.js"></script>
+	<script src="scripts/dompurify-1.0.11.js"></script>
   <canvas id="flag-icon-canvas-32" width="32" height="32" class="hide"></canvas>
   <canvas id="flag-icon-canvas-16" width="16" height="16" class="hide"></canvas>
   </body>
