--- a/src/first-install.html
+++ b/src/first-install.html
@@ -20,11 +20,16 @@
 						<p>FoxyProxy has been the around for almost 15 years. So if you're upgrading from a legacy version, and your proxy settings are missing, please <a href="/import.html">import</a> them.</p>
             <h4>What's New</h4>
 
-						<h6>Version 6.6</h6>
+						<h6>Version 6.6.1</h6>
+						<ul>
+							<li>Removed all minified code for Mozilla; change filenames of 3rd-party libs to include version number.</li>
+						</ul>
+
+						<h6>Version 6.6 (unreleased)</h6>
 
 						<ul>
 								<li>Security fixes with jQuery.</li>
-								<li>Minor UI fixes to the toolbar popup window</li>
+								<li>Minor UI fixes to the toolbar popup window.</li>
 						</ul>
 
             <h6>Version 6.5 (unreleased)</h6>
@@ -60,7 +65,7 @@
       </div>
     </div>
 
-    <script src="scripts/jquery-3.4.1.min.js"></script>
+    <script src="scripts/jquery-3.4.1.js"></script>
     <script src="scripts/utils.js"></script>
     <script src="scripts/import.js"></script>
   </body>
