--- a/src/log.html
+++ b/src/log.html
@@ -39,7 +39,7 @@
           <div class="row">
             <table id="logTable">
               <thead><tr><th>URL</th><th>Proxy Title</th><th>Proxy Color</th><th>Proxy Address</th><th>Match Pattern</th><th>Timestamp</th></thead>
-              <tbody id="rows"></tbody>
+              <tbody></tbody>
             </table>
           </div>
         </div>
