--- a/src/options.html
+++ b/src/options.html
@@ -60,7 +60,7 @@
         <div class="flex">
           <select id="mode">
             <option value="patterns" style="color: #f7941e;" data-i18n="modePatterns"></option>
-            <option value="disabled" style="color: red;" data-i18n="modeDisabled"></li>       
+            <option value="disabled" style="color: red;" data-i18n="modeDisabled">     
           </select>
     
           <div style="text-align: right;">
